Try using java.net.URL directly