@@ -19,14 +19,12 @@ import com.google.common.collect.ImmutableList;
 import com.palantir.conjure.java.api.config.ssl.SslConfiguration;
 import com.palantir.timelock.config.ClusterConfiguration;
 import java.net.MalformedURLException;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import org.apache.hc.core5.net.URIBuilder;
 
 public final class PaxosRemotingUtils {
     private PaxosRemotingUtils() {
@@ -66,8 +64,8 @@ public final class PaxosRemotingUtils {
 
     public static URL convertAddressToUrl(ClusterConfiguration cluster, String address) {
         try {
-            return new URIBuilder(addProtocol(cluster, address)).build().toURL();
-        } catch (MalformedURLException | URISyntaxException e) {
+            return new URL(addProtocol(cluster, address));
+        } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
     }
